# empirica-outreach

./: .env.example  .gitignore  LICENSE  QUICKSTART.md  README.md  pyproject.toml  run_api.py  test_reddit_oauth.py
docs/: REDDIT_OAUTH_SETUP.md
empirica_outreach/: __init__.py
empirica_outreach/agents/: __init__.py  drafter.py  scout.py
empirica_outreach/api/: __init__.py  app.py  routes.py
empirica_outreach/api/templates/: dashboard.html
empirica_outreach/cli/: __init__.py  outreach_cli.py
empirica_outreach/integrations/: __init__.py  reddit.py
empirica_outreach/models/: __init__.py  channel.py  draft.py  opportunity.py
empirica_outreach/storage/: __init__.py  outreach_db.py
web_chat/: embed-demo.html  requirements.txt  widget.js
